all basic features are implemented a few bugs left. make sure the reseting of db works properly at midnight

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,5 +11,6 @@
     <string name="title_activity_main">MainActivity</string>
     <string name="logout">Log Out</string>
     <string name="step_counting_notification_text">Tracking...</string>
+    <string name="milestone_text">%1$s just walked %2$d feet</string>
 
 </resources>
