--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,7 +22,7 @@
     <string name="distance_walked_meter">%1$s Meters</string>
     <string name="distance_walked_feet">%1$s Feet</string>
     <string name="step_log_entry">%1$s: %2$s Steps, %3$s Meters, %4$s Feet</string>
-    <string name="leaderboard_entry">%1$d: %2$s %3$s Steps, %4$s Meters, %5$s Feet</string>
+    <string name="leaderboard_entry">%1$d: %2$s, %3$s Meters, %4$s Feet</string>
     <string name="milestone_title">New Milestone Achieved!</string>
 
 </resources>
